More API changes and cleanup work